fix contrast errors

--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,7 @@ nav a:hover {
 h1 {
     font-family: 'Dancing Script', cursive;
     font-size: 100px;
-    color: yellow;
+    color: rgb(254, 4, 233);
     background-image: url('../images/background/hua.jpg');
     text-align: center;
     margin-top: 0; /* 移除上边距 */
@@ -210,7 +210,7 @@ main {
 .petName {
     background: none;
     border: none;
-    color: yellowgreen;
+    color: rgb(247, 35, 247);
     font: inherit;
     cursor: pointer;
     font-size: 35px;
